# leddimmer

./: README.md  flake.nix
fw/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.default
fw/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  app_main.c  data.c  data.h  drivers.c  drivers.h  emotes.c  emotes.h  events.h  led.c  led.h  mqtt.c  mqtt.h  power.c  power.h  wifi.c
hw/: .gitignore  connectors.kicad_sch  driver.kicad_sch  leddimmer-hw.kicad_pcb  leddimmer-hw.kicad_prl  leddimmer-hw.kicad_pro  leddimmer-hw.kicad_sch  mcu.kicad_sch  power.kicad_sch  project.kicad_sym
hw/project.pretty/: CSD17571Q2.kicad_mod
nix/: fw.nix  render-3d.html
