idf_component_register(
    SRCS
        "app_main.c"
        "adc.c"
        "data.c"
        "drivers.c"
        "emotes.c"
        "events.c"
        "http_server.c"
        "led.c"
        "util/led_strip_encoder.c"
        "mqtt.c"
        "performance.c"
        "periodic.c"
        "power.c"
        "wifi.c"
    INCLUDE_DIRS ".")
